--- a/test_app/Gemfile
+++ b/test_app/Gemfile
@@ -32,6 +32,7 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
   gem 'capybara', '~> 3.35', '>= 3.35.3'
+  gem 'factory_bot_rails', '~> 6.2'
   gem 'rspec-rails', '~> 5.0.0'
 end
 
