--- a/test_app/Gemfile
+++ b/test_app/Gemfile
@@ -33,6 +33,7 @@ group :development, :test do
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
   gem 'capybara', '~> 3.35', '>= 3.35.3'
   gem 'factory_bot_rails', '~> 6.2'
+  gem 'faker', '~> 2.18'
   gem 'rspec-rails', '~> 5.0.0'
 end
 
