--- a/test_app/Gemfile
+++ b/test_app/Gemfile
@@ -34,6 +34,7 @@ group :development, :test do
   gem 'capybara', '~> 3.35', '>= 3.35.3'
   gem 'factory_bot_rails', '~> 6.2'
   gem 'faker', '~> 2.18'
+  gem 'httparty', '~> 0.18.1'
   gem 'rspec-rails', '~> 5.0.0'
 end
 
