--- a/test_app/Gemfile
+++ b/test_app/Gemfile
@@ -36,6 +36,7 @@ group :development, :test do
   gem 'faker', '~> 2.18'
   gem 'httparty', '~> 0.18.1'
   gem 'rspec-rails', '~> 5.0.0'
+  gem 'webmock'
 end
 
 group :development do
