--- a/test_app/Gemfile
+++ b/test_app/Gemfile
@@ -36,7 +36,8 @@ group :development, :test do
   gem 'faker', '~> 2.18'
   gem 'httparty', '~> 0.18.1'
   gem 'rspec-rails', '~> 5.0.0'
-  gem 'webmock'
+  gem 'webmock', '~> 3.13.0'
+  gem 'vcr', '~> 6.0'
 end
 
 group :development do
